--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art-acceuil</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Notre ART</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Amet, dolores accusamus doloribus delectus vero non repudiandae 
+        cum ad corporis molestiae voluptatem nesciunt obcaecati commodi, 
+        consectetur soluta. A culpa dolores molestiae!
+    </p>
 </body>
 </html>
